--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,12 +1,12 @@
 apiVersion: v2
-name: microservice-template
+name: microservice-authentication
 type: application
 version: 0.0.0
 appVersion: 0.0.0
-description: "microservice-template: Template for microservices."
+description: "microservice-authentication: Authentication microservice."
 icon: https://avatars.githubusercontent.com/u/64909001
 sources:
-  - https://github.com/Ubivius/microservice-template
+  - https://github.com/Ubivius/microservice-authentication
 maintainers:
   - name: Ubivius
     email: ubivius@gmail.com
