--- a/chart/templates/serviceaccount.yaml
+++ b/chart/templates/serviceaccount.yaml
@@ -3,10 +3,10 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "microservice-template.serviceAccountName" . }}
+  name: {{ include "microservice-authentication.serviceAccountName" . }}
   annotations:
     {{- toYaml .Values.serviceAccount.annotations | nindent 4 }}
   namespace: {{ .Release.Namespace }}
   labels:
-{{ include "microservice-template.labels" . | nindent 4 }}
+{{ include "microservice-authentication.labels" . | nindent 4 }}
 {{- end -}}
