--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -43,17 +43,18 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: LoadBalancer
+  type: ClusterIP
   port: 9090
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths: []
+    - host: auth.anon.dev.ubivius.tk
+      paths:
+        - path: /
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
