--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -46,15 +46,11 @@ service:
   type: ClusterIP
   port: 9090
 
-ingress:
+ingressRoute:
   enabled: true
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: auth.anon.dev.ubivius.tk
-      paths:
-        - path: /
+  match: Host(`auth.anon.dev.ubivius.tk`) && PathPrefix(`/`)
+  middlewares:
+    - name: cors-header
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
