--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -22,6 +22,18 @@ livenessProbe:
   timeoutSeconds: 30
   failureThreshold: 10
 
+env:
+  - name: KEYCLOAK_ADMIN_USER
+    valueFrom:
+      configMapKeyRef:
+        name: keycloak-env-vars
+        key: KEYCLOAK_ADMIN_USER
+  - name: KEYCLOAK_ADMIN_PASSWORD
+    valueFrom:
+      secretKeyRef:
+        name: keycloak
+        key: admin-password
+
 serviceAccount:
  # Specifies whether a service account should be created
   create: true
