--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -14,6 +14,8 @@ spec:
     metadata:
       labels:
         {{- include "microservice-authentication.selectorLabels" . | nindent 8 }}
+      annotations:
+        {{- toYaml .Values.annotations | nindent 8 }}
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -30,8 +32,16 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
+            - name: http
               containerPort: 9090
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
+              protocol: TCP
+{{- range .Values.service.otherPorts }}          
+            - name: {{ .name }}
+              containerPort: {{ .port }}
+              protocol: TCP
+{{- end}}
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
