Added tls flags to ingressroute

--- a/chart/templates/ingressroute.yaml
+++ b/chart/templates/ingressroute.yaml
@@ -21,4 +21,6 @@ spec:
           namespace: default
       {{- end }}
     {{- end }}
+  tls:
+    secretName: {{ .Values.ingressRoute.tls.secretName }}
 {{- end }}     
